Add dynamic mailto contact form with JS

--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,15 @@
     <div class="contact-container">
       <h1>Contact Us</h1>
 
-      <form action="#" method="post" class="contact-form">
+      <form class="contact-form" id="contactForm">
         <label for="name">Your Name</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="Name" required>
 
         <label for="email">Your Email</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="Email" required>
 
-        <label for="event">Your Event</label>
-        <select id="event" name="event" required>
+        <label for="event-type">Your Event</label>
+        <select id="event-type" name="Event Type" required>
           <option value="">Please select an event</option>
           <option value="planning">Wedding</option>
           <option value="planning">Traditional Wedding</option>
@@ -51,8 +51,8 @@
           <option value="bespoke">Drinks Station</option>
         </select>
 
-        <label for="event">Your Service</label>
-        <select id="event" name="event" required>
+        <label for="service">Your Service</label>
+        <select id="service" name="Service" required>
           <option value="">Please select a service</option>
           <option value="planning">Event Planning</option>
           <option value="bespoke">Even Design & Styling</option>
@@ -62,7 +62,7 @@
         </select>
 
         <label for="message">Your Message</label>
-        <textarea id="message" name="message" required></textarea>
+        <textarea id="message" name="Message" required></textarea>
 
         <button type="submit">SUBMIT</button>
       </form>
@@ -76,6 +76,6 @@
     <p>© 2025 Sharon & Vimbai Events | All Rights Reserved</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
